<resources>
    <string name="app_name">ghFISCAL</string>
    <string name="version">version: 1.0.0</string>
    <string name="action_settings">Settings</string>
    <string name="products">Products</string>
    <string name="order_history">Order History</string>
    <string name="settings">Settings</string>
    <string name="profile">My Profile</string>
    <string name="upc">Barcode number</string>
    <string name="item_id">Item ID</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="search_products">Search Products</string>
    <string name="categories">Categories</string>
    <string name="search_categories">Search Categories</string>
    <string name="name_can_not_be_empty">Name can not be empty</string>
    <string name="description_can_not_be_empty">Description can not be empty</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="category_saved">Category saved!</string>
    <string name="price_can_not_be_empty">Price can not be empty</string>
    <string name="please_select_category">Please select category</string>
    <string name="upc_can_not_empty">UPC can not be empty</string>
    <string name="product_saved">Product saved!</string>
    <string name="total">Total: %s</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="undo">Undo</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="discount">Discount: %s</string>
    <string name="vat">VAT: %s</string>
    <string name="pay">Pay: %s</string>
    <string name="apply">Apply</string>
    <string name="quantity">Quantity</string>
    <string name="amount_to_pay">Amount To Pay:</string>


    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="pay_masterpass_qr">Masterpass</string>
    <string name="pay_visa_qr">mVisa QR</string>
    <string name="pay_vodafone_cash">Vodafone</string>
    <string name="pay_gmoney">G-Money</string>
    <string name="pay_mtn">MTN MoMo</string>
    <string name="pay_airtel">Airtel-tigo</string>


    <string name="amount">Amount</string>
    <string name="voucher">Voucher</string>
    <string name="_continue">Continue</string>
    <string name="done">Done</string>
    <string name="start_a_new_sale">Start a new sale</string>
    <string name="entered_a_lesser_amount_message">You entered a lesser amount than tendered amount. Do you want to reset?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="balance">Balance %s</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="send_email_receipt">Send email receipt</string>
    <string name="send_sms_receipt">Send SMS receipt</string>
    <string name="order_no">Order #%s</string>
    <string name="search_order">Search Order</string>
    <string name="uploading">Uploading</string>
    <string name="in_progress">In progress</string>
    <string name="your_session_is_expired">Your sesion is expired</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout</string>
    <string name="vat_raffle">VAT Promo</string>


    <string name="pay_steps">Approval Steps</string>


    <string name="mtn_steps">MTN MoMo customer steps to follow:
Dial *170#
Select 6 My Wallet
Select 3 My Approvals
Enter PIN to get your Pending Approvals
Select the DEBIT GHS 66.75 initiated by epesewa
Select 1 Yes to approve the transaction
Wait for DEBIT confirmation prompt or SMS</string>
    <string name="syncing">Syncing..</string>
    <string name="fetching_products">Fetching products</string>
    <string name="fetching_categories">Fetching categories</string>
    <string name="waiting_for_payment">Waiting for payment</string>
    <string name="pull_down_to_refresh">Pull down to refresh</string>


</resources>
