<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.farsheel.mypos.util.Util" />

        <variable
                name="viewmodel"
                type="com.farsheel.mypos.view.payment.tender.PaymentTenderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/amountToPayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_to_pay"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".2" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/amountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@{Util.currencyLocale(viewmodel.amountToPay)}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountToPayLabel"
                tools:text="$1000.00" />


        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cashTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corner_radius_rectangle"
                android:drawableTop="@drawable/pay_cash_72"
                android:gravity="center"
                android:onClick="@{()-> viewmodel.onSelectCash()}"
                android:padding="@dimen/padding_small"
                android:text="@string/cash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.461" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chequeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/bg_corner_radius_rectangle"
                android:drawableTop="@drawable/ic_cheque_96dp"
                android:gravity="center"
                android:onClick="@{()-> viewmodel.onSelectAirtel()}"
                android:padding="@dimen/padding_small"
                android:visibility="gone"
                android:text="@string/cheque"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cashTv"
                app:layout_constraintTop_toBottomOf="@id/amountTv"
                app:layout_constraintVertical_bias=".1" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/momoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corner_radius_rectangle"
                android:drawableTop="@drawable/pay_masterpass_qr_72"
                android:gravity="center"
                android:onClick="@{()-> viewmodel.onSelectMasterpass()}"
                android:padding="@dimen/padding_small"
                android:text="@string/pay_masterpass_qr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.385"
                app:layout_constraintStart_toEndOf="@+id/cashTv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.457" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/visaTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corner_radius_rectangle"
                android:drawableTop="@drawable/pay_visa_qr_72"
                android:gravity="center"
                android:onClick="@{()-> viewmodel.onSelectVisa()}"
                android:padding="@dimen/padding_small"
                android:text="@string/pay_visa_qr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cashTv"
                app:layout_constraintHorizontal_bias="0.643"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.468" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vfcash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corner_radius_rectangle"
                android:drawableTop="@drawable/pay_vodafone_72"
                android:gravity="center"
                android:onClick="@{()-> viewmodel.onSelectVodafone()}"
                android:padding="@dimen/padding_small"
                android:text="@string/pay_vodafone_cash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gmoney"
                app:layout_constraintHorizontal_bias="0.643"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visaTv"
                app:layout_constraintVertical_bias="0.256" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gmoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corner_radius_rectangle"
                android:drawableTop="@drawable/pay_gmoney_72"
                android:gravity="center"
                android:onClick="@{()-> viewmodel.onSelectGmoney()}"
                android:padding="@dimen/padding_small"
                android:text="@string/pay_gmoney"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cashTv"
                app:layout_constraintVertical_bias="0.255" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/paymtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corner_radius_rectangle"
                android:drawableTop="@drawable/pay_mtn_72"
                android:gravity="center"
                android:onClick="@{()-> viewmodel.onSelectMtn()}"
                android:padding="@dimen/padding_small"
                android:text="@string/pay_mtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.394"
                app:layout_constraintStart_toEndOf="@+id/gmoney"
                app:layout_constraintTop_toBottomOf="@+id/momoTv"
                app:layout_constraintVertical_bias="0.254" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>