<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
                name="viewmodel"
                type="com.farsheel.mypos.view.product.view.AddEditProductViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_large">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/upcLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/upc"
                        app:errorTextString="@{viewmodel.upcError}">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:maxLines="1"
                            android:enabled="@{!viewmodel.busy}"
                            android:text="@={viewmodel.itemUpc}"
                            app:removeErrorOnTyping="@{upcLayout}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        app:errorTextString="@{viewmodel.nameError}">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:maxLines="1"
                            android:enabled="@{!viewmodel.busy}"
                            android:text="@={ viewmodel.itemName}"
                            app:removeErrorOnTyping="@{nameLayout}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/priceLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:hint="@string/price"
                        app:errorTextString="@{viewmodel.priceError}">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:enabled="@{!viewmodel.busy}"
                            android:text="@={ viewmodel.price}"
                            app:removeErrorOnTyping="@{priceLayout}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/categoryLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:hint="@string/category"
                        app:errorTextString="@{viewmodel.categoryError}">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="none"
                            android:longClickable="false"
                            android:maxLines="1"
                            android:enabled="@{!viewmodel.busy}"
                            android:onClick="@{()-> viewmodel.showCategories()}"
                            android:text="@={ viewmodel.categoryString}"
                            app:removeErrorOnTyping="@{categoryLayout}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_marginBottom="50dp"
                        android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:maxLines="3"
                            android:enabled="@{!viewmodel.busy}"
                            android:text="@={viewmodel.description}" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/saveProductFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_margin"
                android:enabled="@{!viewmodel.busy}"
                android:onClick="@{()-> viewmodel.addEditProduct()}"
                android:src="@drawable/ic_check_white_24dp"
                app:layout_anchor="@+id/bottomSheet"
                app:layout_anchorGravity="end|bottom" />

        <LinearLayout
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_categories">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.categoryFilter}" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/catRcv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/layout_category_selector_list_item" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>